# masterbase

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.api  README.md  alembic.ini  build.env  compose.yaml  create.bat  create.sh  database.Dockerfile  deploy_api.sh  docker-compose.yaml  docker-compose.yml  prometheus.yaml  prometheus.yml  pyproject.toml  vars.ps1  vars.sh
.github/workflows/: integration.yaml  setup.yml  test.yaml
alembic/: env.py
alembic/versions/: 58fb39990d30_initialize.py
data/: valhalla-rules.yar
data/npy/: S_hat.npy
docs/source/: conf.py  index.rst  masterbase.rst  modules.rst
masterbase/: __init__.py  analysis.py  anomaly.py  app.py  guards.py  lib.py  models.py  pruning.py  registers.py  steam.py
migrations/: env.py
migrations/versions/: 405672cf4046_reports.py  53d7f00c595e_oid_key_hash.py  58fb39990d30_initialize.py  82f4e558463f_ext_blobs.py  8635776567b7_config.py  9f376f19995e_remove_beta_req.py  af01d23e698e_cases.py  b941ebee3091_analysis.py  bc89a4c6d2b4_report_update_timings.py  eba5782c5979_pruning.py  f34467ce7d29_ext_blobs.py  f36ba7b55e49_report_reasons.py  f51cab87d3fd_broadcasts.py
provisioning/dashboards/: monitor.yml
provisioning/datasources/: prometheus.yml
services/api/: Dockerfile  start.sh
services/db/: Dockerfile  export_db.cron  export_db.sh
services/minio/: Dockerfile  (+1 more)
src/: __init__.py
templates/: base.html  footer.html  front-page.html  header.html  profile.html  server-data.html  toggler.html
tests/: test_api.py  test_auth.py  test_lib.py  test_servers.py  test_steam.py
(+25 files in other folders)
