[project]
name = "api"
version = "0.1.0"
description = "Opinionated wrapper for the Steam API. Goal is to scrape public data on TF2 severs."
authors = [
    {name = "jayceslesar", email = "jaycesles@gmail.com"},
]
dependencies = [
    "toml>=0.10.2",
    "requests>=2.31.0",
    "pydantic>=2.5.3",
    "litestar[standard]>=2.4.5",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "uvicorn>=0.27.1",
    "loguru>=0.7.2",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "pytest>=7.4.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
includes = ["src"]

[tool.pdm.scripts]
format.shell = "ruff format src tests && ruff check src tests --fix"
lint.shell = "ruff check src tests"
app = "src/api/app.py"

[tool.mypy]
files = ["src", "tests"]
explicit_package_bases = true

# See https://github.com/astral-sh/ruff#configuration
[tool.ruff.lint]
select = ["F", "E", "I001"]
ignore = ["D413"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff]
line-length = 120
target-version = "py311"  # defaults to 3.8, but this repo targets 3.9%

[tool.pytest.ini_options]
asyncio_mode = "auto"